--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~10.0.2",
     "@material/card": "^7.0.0",
     "hammerjs": "^2.0.8",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
